# MyFFmpeg

./: .gitignore  README.md  build.gradle  gradle.properties
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/module/video/jnc/myffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/Shader/: fragment_texture.glsl  vertex_texture.glsl
app/src/main/cpp/: AACParse.cpp  AMF0.cpp  AudioMix.cpp  AudioPlayer.cpp  BitmapWaterMark.cpp  CallJava.cpp  CameraStream.cpp  CurrentTimeBitmap.cpp  DecodeAudioThread.cpp  DecodeMyAudioThread.cpp  DecodeVideoThread.cpp  EditParent.cpp  FFmpegReadFrame.cpp  FilterParent.cpp  FlvParse.cpp  GifMake.cpp  Mp4Player.cpp  MyData.cpp  MyRtmp.cpp  MyThread.cpp  NewAudioPlayer.cpp  NewVideoJoint.cpp  Notify.cpp  NumUtils.cpp  OpenGlTest.cpp  PublishStream.cpp  ReadAvPacket.cpp  SRSLibRtmp.cpp  SeekVideo.cpp  SonicRead.cpp  Utils.cpp  VideoClip.cpp  VideoDub.cpp  VideoFilter.cpp  VideoJoint.cpp  VideoMerge.cpp  VideoMusic.cpp  VideoRunBack.cpp  VideoSpeed.cpp  YuvPlayer.cpp  (+10 more)
app/src/main/cpp/amf0/: rtmp_sys.h
app/src/main/cpp/include/: AMF0.h  AudioMix.h  AudioPlayer.h  BitmapWaterMark.h  CallJava.h  CameraStream.h  CurrentTimeBitmap.h  DecodeAudioThread.h  DecodeMyAudioThread.h  DecodeVideoThread.h  EditParent.h  FilterParent.h  FlvParse.h  GifMake.h  Mp4Player.h  MyRtmp.h  MyThread.h  NewAudioPlayer.h  NewVideoJoint.h  Notify.h  NumUtils.h  OpenGlTest.h  PublishStream.h  ReadAvPacket.h  SRSLibRtmp.h  SeekFile.h  SonicRead.h  Utils.h  VideoClip.h  VideoDub.h  VideoFilter.h  VideoJoint.h  VideoMerge.h  VideoMusic.h  VideoRunBack.h  VideoSpeed.h  YuvPlayer.h  aacparse.h  audio_data.h  decode_encode_test.h  (+11 more)
app/src/main/cpp/include/libavformat/: avformat.h
app/src/main/cpp/include/libavutil/: rational.h
app/src/main/java/module/video/jnc/myffmpeg/: AddFilterActivity.java  AudioRecordActivity.java  CameraPreview.java  CameraStreamActivity.java  ChoiseVideoActivity.java  ChoiseVideoAdapter.java  Constant.java  DecodeEncodeActivity.java  DecodeMP4Activity.java  DensityUtils.java  EncodeActivity.java  EncodeYuvActivity.java  FFmpegUtils.java  FlvParseActivity.java  GlSurfaceViewActivity.java  HardCodeActivity.java  HardMuxerCameraActivity.java  LoadJpgActivity.java  LoadJpgRender.java  MainActivity.java  Mp4PlayerActivity.java  MuxerActivity.java  MyAllActivity.java  MyApplication.java  MyBaseAdapter.java  MyCameraFilter.java  MyFFmpegActivity.java  MyGLSurfaceShader.java  MyGlSurface.java  MyGlSurfaceView.java  MyMediaMuxer.java  MyNewRecordActivity.java  MyRecordActivity.java  MyRender.java  MySDLActivity.java  MyVideoAudioSurfaceView.java  MyVideoGpuShow.java  NetStreamActivity.java  NetWorkSpeedUtils.java  (+15 more)
app/src/main/java/net/soundtouch/: SoundTouch.java
app/src/main/java/net/surina/soundtouch/: SoundTouch.java
app/src/main/jni/: Android.mk  Application.mk  AudioPlayer.cpp  CMakeLists.txt  DecodeAudioThread.cpp  DecodeMyAudioThread.cpp  DecodeVideoThread.cpp  FFmpegReadFrame.cpp  Mp4Player.cpp  MyAudio.cpp  MyData.cpp  MyThread.cpp  MyWindow.cpp  Notify.cpp  ReadAvPacket.cpp  SonicRead.cpp  YuvPlayer.cpp  avcodec.c  build_android.sh  decode_encode_test.cpp  decode_show_gl.cpp  ffmpeg.c  filter.c  filter_video.c  gpu_video_sl_audio.cpp  my_audio_reocrd.c  my_build_android.sh  my_c_plus_plus_thread.cpp  my_camera_muxer.c  my_camera_muxer.h  my_ffmpeg.c  my_ffmpeg.cpp  my_log.c  my_muxer.c  my_new_camera_filter.c  my_new_camera_muxer.c  my_open_sl_test.cpp  my_stream.c  my_thread.cpp  my_utils.c  (+7 more)
app/src/main/jni/include/: AudioPlayer.h  DecodeAudioThread.h  DecodeMyAudioThread.h  DecodeVideoThread.cpp  DecodeVideoThread.h  FFmpegReadFrame.h  Mp4Player.h  MyAudio.h  MyThread.h  MyWindow.h  My_LOG.h  ReadAvPacket.h  STTypes.h  SonicRead.h  Utils.h  YuvPlayer.h  decode_encode_test.h  decode_show_gl.h  filter_video.h  gpu_video_sl_audio.h  module_video_jnc_myffmpeg_FFmpegUtils.h  module_video_jnc_myffmpeg_SDLActivity.h  module_video_jnc_myffmpeg_SDLActivity_SDLCommandHandler.h  module_video_jnc_myffmpeg_SDLActivity_ShowTextInputTask.h  module_video_jnc_myffmpeg_SDLUtils.h  my_audio_record.h  my_camera_muxer.h  my_data.h  my_ffmpeg.h  my_log.h  my_muxer.h  my_new_camera_muxer_filter.h  my_open_sl_test.h  my_utils.h  mydecode.h  myfiler.h  mysoundtouch.h  mystream.h  soundTouchDeal.h  swscale.h  (+1 more)
app/src/main/jni/include/libavformat/: avformat.h
app/src/main/jni/include/libavutil/: dict.h  pixfmt.h  rational.h
app/src/main/jni/src/main/android/: SDL_android_main.c
app/src/main/res/drawable/: button_selector.xml  video_dub_button_pressed.xml  video_dub_button_selector.xml  video_dub_button_shape.xml
app/src/main/res/layout/: activity_about.xml  activity_add_filter.xml  activity_audio_record.xml  activity_base.xml  activity_camera_stream.xml  activity_choise_music.xml  activity_choise_pic.xml  activity_choise_video.xml  activity_deal_video.xml  activity_decode_encode.xml  activity_decode_mp4.xml  activity_eglcamera.xml  activity_encode.xml  activity_encode_yuv.xml  activity_flv_parse.xml  activity_gl_surface_view.xml  activity_hard_code.xml  activity_hard_muxer_camera.xml  activity_load_jpg.xml  activity_main.xml  activity_main2.xml  activity_mp42_gif.xml  activity_mp4_player.xml  activity_muxer.xml  activity_my_all.xml  activity_my_camera_filter.xml  activity_my_deal_file.xml  activity_my_ffmpeg.xml  activity_my_new_record.xml  activity_my_record.xml  activity_net_stream.xml  activity_new_main.xml  activity_open_gl.xml  activity_open_gl_test.xml  activity_open_gl_ture.xml  activity_opengl.xml  activity_parse_h264_file.xml  activity_play_audio.xml  activity_play_list.xml  activity_play_video.xml  (+38 more)
app/src/main/res/raw/: camera_fragment_shader.glsl  camera_vertex_shader.glsl  load_jpg_vertext_shader.glsl  simple_fragment_shader.glsl  simple_vertex_shader.glsl  texture_fragment_shader.glsl  texture_vertext_shader.glsl  yuv_frg_shader.glsl  yuv_vertex_shader.glsl
app/src/main/res/values/: attrs.xml  colors.xml  strings.xml  styles.xml
app/src/main/res/xml/: temp_provider.xml
(+117 files in other folders)
